<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Правда или ложь</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Play">Играть</string>
    <string name="Results">Результаты</string>
    <string name="Level_word">Уровень</string>
    <string name="Level_1">Уровень 1</string>
    <string name="Level_2">Уровень 2</string>
    <string name="Level_3">Уровень 3</string>
    <string name="Level_4">Уровень 4</string>
    <string name="Level_5">Уровень 5</string>
    <string name="results_header">Ваш средний результат</string>
    <string name="average_results_default">0,00 %</string>
    <string name="level_results_default">0,00 %</string>
    <string name="go_to_menu">В меню</string>
    <string name="false_button">Ложь</string>
    <string name="truth_button">Правда</string>
    <string name="next_button">Дальше</string>
    <string name="your_result">Ваш результат</string>
    <string name="number_of_correct_answers">"Правильных ответов: "</string>
    <string name="result_percents">Правильных ответов: 0.0 %</string>
    <string name="sound_on_off">Звук</string>
    <string name="action_clear_history">Начать сначала</string>
    <string name="yes_clear_history">Да</string>
	<string name="no_clear_history">Нет</string>
	<string name="title_clear_history">Удаление статистики</string>
	<string name="clear_history_text">Вы действительно хотите удалить все данные?</string>

</resources>
