<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="13" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/salute" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtlevelMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_result"
            android:textColor="@color/my_red"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <TextView
                android:id="@+id/txtResultPercents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/result_percents"
                android:textColor="@color/my_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnAvailableLevel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green_background"
            android:text="@string/Level_1"
            android:textColor="@color/light_grey"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnGoToResults"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_yellow_background"
            android:text="@string/Results"
            android:textColor="@color/light_grey"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnGoToMenu"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_dark_blue_background"
            android:text="@string/go_to_menu"
            android:textColor="@color/light_grey"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
